# LibCMaker_Expat

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  cmr_build_expat.cmake  lib_cmaker_expat.cmake
ci/: ci_lib_params.sh
cmake/: FindEXPAT.cmake  FindExpat.cmake  cmr_build_rules_expat.cmake  cmr_find_package_expat.cmake  cmr_get_download_params_expat.cmake
cmake/modules/: FindEXPAT.cmake  cmr_expat_cmaker.cmake  cmr_expat_get_download_params.cmake
example/TestCompileWithExpat/: CMakeLists.txt  README.md
patch/expat-2.2.5/: CMakeLists.txt
patch/expat-2.2.7/: CMakeLists.txt
samples/TestCompileWithExpat/: CMakeLists.txt  README.md
samples/TestCompileWithExpat/test/: CMakeLists.txt
samples/ci_sample/src/: example.cpp  example_test.cpp
samples/ci_sample/test/: CMakeLists.txt
